<resources>

    <string name="generic_string_error">Error</string>

    <!--NotificationsPermission fragment-->
    <string name="notifications_permission_title">Notifications</string>
    <string name="notifications_permission_subtitle">%s requires notifications to be enabled to receive authentication requests and will not work otherwise. You will only receive notifications for authentication.</string>

    <!--Pairing screen-->

    <string name="enable_button_text">Enable</string>
    <string name="pairing_title">Pairing</string>
    <string name="pairing_subtitle">To complete pairing, scan the QR code displayed in your browser, or enter the pairing key manually</string>
    <string name="pairing_hint"><b>Enter Pairing key</b></string>
    <string name="pairing_button">Pair</string>
    <string name="pairing_invalid_key">Invalid pairing key</string>

    <string name="pairing_camera_permission_rationale">You must enable camera permission in order to scan.</string>
    <string name="pairing_camera_button_enable">Enable</string>

    <string name="pairing_layout_verifying_text">Verifying</string>
    <string name="pairing_layout_paired_text">Paired</string>

    <!-- Main Screen -->
    <string name="main_view_accounts_title">Accounts</string>
    <string name="main_view_new_button_text">Add Account</string>
    <string name="main_view_qr_auth_button_text">QR Auth</string>
    <string name="main_view_send_logs_title">Send Logs</string>
    <string name="pop_up_logs_sent_title">Logs sent</string>
    <string name="pop_up_logs_sent_message">Logs sent successfully. You can find your support ID on the side menu.</string>
    <string name="pop_up_logs_sent_positive_button">OK</string>
    <string name="main_view_support_id_placeholder">Support ID: %s</string>
    <string name="main_view_version_placeholder">V%s(000%d)</string>

    <string name="main_screen_notification_no_network">No network</string>

    <string name="auth_view_button_approve">Approve</string>
    <string name="auth_view_button_deny">Deny</string>
    <string name="auth_success_layout_message">Completed</string>
    <string name="auth_denied_layout_message">Blocked</string>
    <string name="auth_timeout_layout_message">Timed out</string>
    <string name="auth_bio_layout_title">Authenticate to approve</string>
    <string name="auth_dialog_fallback_button_title">Enter PIN</string>

    <string name="notification_default_title">PingOne Authentication Request</string>
    <string name="notification_default_subtitle">You have a new authentication request.</string>
    <string name="notification_action_approve">Approve</string>
    <string name="notification_action_deny">Deny</string>


    <!--Content description used for automation testing-->
    <string name="cd_logo_image" translatable="false">logo_image_cd</string>
    <string name="cd_camera_image" translatable="false">camera_image_cd</string>
    <string name="cd_spinner_image" translatable="false">spinner_image_cd</string>
    <string name="cd_checkmark_image" translatable="false">checkmark_image_cd</string>
    <string name="cd_invalid_image" translatable="false">invalid_image_cd</string>
    <string name="cd_bar_logo_image" translatable="false">logotype_image_cd</string>

    <string name="notifications_channel_name" translatable="false">PingOneNotificationsChannel</string>
    <string name="notifications_channel_description" translatable="false">PingOneNotificationChannel</string>

    <!-- PLACEHOLDERS -->
    <string name="username_placeholder">User</string>
    <string name="copied">Copied</string>

    <!--QR authentication screen-->

    <string name="qr_authentication_title">Authentication</string>
    <string name="qr_authentication_subtitle">To authenticate scan the QR code displayed in your browser, or enter the code manually</string>
    <string name="qr_authentication_hint">Enter Code Manually</string>
    <string name="qr_authentication_button">Authenticate</string>
    <string name="qr_authentication_spinner_text">Authenticating</string>
    <string name="text_view_success_authentication">Success</string>
    <string name="qr_view_timeout_layout_message">Timed Out</string>
    <string name="qr_view_denied_layout_message">Denied</string>
    <string name="qr_auth_approve_title">Authenticate</string>
    <string name="qr_auth_title_single_user">Approve account</string>
    <string name="qr_auth_title_multiply_users">Select account</string>
    <string name="qr_auth_subtitle_multiply_users">Select one of the listed accounts to authenticate with.</string>

</resources>
