<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.appcompat.widget.Toolbar
            style="@style/headerBar"
            android:id="@+id/headerBar"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <View
                    android:id="@+id/placeholder_view"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    style="@style/headerBar"/>
                <ImageView
                    android:layout_below="@+id/placeholder_view"
                    android:contentDescription="@string/cd_logo_image"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/logo_horizontal" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_below="@+id/headerBar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.camera.view.PreviewView
                    android:id="@+id/qr_auth_camera_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/layout_camera_disabled"
                    android:visibility="gone"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:contentDescription="@string/cd_camera_image"
                        android:src="@mipmap/icon_nocamera"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:textColor="@color/color_main_background_white"
                        android:text="@string/pairing_camera_permission_rationale"/>
                    <Button
                        android:id="@+id/button_camera_enable"
                        android:text="@string/enable_button_text"
                        android:textColor="@color/color_main_background_white"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:background="@drawable/roundable_button_black_white"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_main_background_white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/authenticationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_title_text_color"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/qr_authentication_title"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/pairingSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/qr_authentication_subtitle"
                    android:textColor="@color/color_title_text_color"
                    android:textSize="13sp"/>

                <EditText
                    android:id="@+id/qr_authentication_data_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/roundable_edittext"
                    android:textColorHint="@color/color_hint_text_color"
                    android:textColor="@color/color_title_text_color"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:inputType="textCapCharacters"
                    android:hint="@string/qr_authentication_hint"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/qr_authenticate_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:textColor="@color/color_hint_text_color"
                    android:background="@drawable/roundable_button_blue"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/qr_authentication_button"
                    android:textAllCaps="false"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    android:enabled="false"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
