<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            style="@style/headerBar"
            android:id="@+id/headerBar"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <View
                    android:id="@+id/placeholder_view"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    style="@style/headerBar"/>
                <ImageView
                    android:layout_below="@+id/placeholder_view"
                    android:contentDescription="@string/cd_logo_image"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/logo_horizontal" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_below="@+id/headerBar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.camera.view.PreviewView
                    android:id="@+id/pairing_camera_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/layout_camera_disabled"
                    android:visibility="gone"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:contentDescription="@string/cd_camera_image"
                        android:src="@mipmap/icon_nocamera"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:textColor="@color/color_main_background_white"
                        android:text="@string/pairing_camera_permission_rationale"/>
                    <Button
                        android:id="@+id/button_camera_enable"
                        android:text="@string/enable_button_text"
                        android:textColor="@color/color_main_background_white"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:background="@drawable/roundable_button_black_white"/>

                </LinearLayout>

            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_main_background_white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pairingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/pairing_title"
                    android:textSize="22sp"
                    android:textColor="@color/color_title_text_color"
                    />

                <TextView
                    android:id="@+id/pairingSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/pairing_subtitle"
                    android:textSize="13sp"
                    android:textColor="@color/color_title_text_color"/>

                <EditText
                    android:id="@+id/pairing_key_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/roundable_edittext"
                    android:gravity="center"
                    android:hint="@string/pairing_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:textColorHint="@color/color_hint_text_color"
                    android:textColor="@color/color_title_text_color"
                    tools:targetApi="o"/>

                <Button
                    android:id="@+id/button_pair"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/roundable_button_black_blue"
                    android:enabled="false"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/pairing_button"
                    android:textColor="@color/color_title_text_color"
                    android:textAllCaps="false"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/layout_verifying"
        android:id="@+id/layout_verifying"
        android:visibility="gone"/>

    <include
        layout="@layout/layout_success"
        android:id="@+id/layout_success"
        android:visibility="gone"/>

    <include
        layout="@layout/layout_invalid"
        android:id="@+id/layout_invalid"
        android:visibility="gone"/>
</FrameLayout>