<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background_white"
    tools:context=".fragments.QrAuthenticationParserFragment">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/header_bar"
            style="@style/headerBar"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:elevation="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/cd_bar_logo_image"
                android:src="@drawable/ic_logo_pingidentity_horizontal" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout_qr_auth_buttons"
            android:layout_below="@id/header_bar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_qr_auth_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="65dp"
                    android:textColor="@color/color_title_text_color"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/text_view_qr_auth_subtitle"
                    android:layout_below="@+id/text_view_qr_auth_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/color_subtitle_text_color"
                    android:text="@string/qr_auth_subtitle_multiply_users"
                    android:visibility="invisible"
                    android:layout_marginStart="18dp"/>

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/text_view_qr_auth_subtitle"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_light_grey_borders" />

                <ListView
                    android:id="@+id/list_view_users_qr_auth"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_below="@id/view_divider" />
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="65dp"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/qr_auth_button_approve"
                    style="@style/roundable_button_approve"
                    android:textColor="@color/color_approve_button_disabled"
                    android:text="@string/auth_view_button_approve"
                    android:textSize="18sp"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
                <Button
                    android:id="@+id/qr_auth_button_deny"
                    style="@style/roundable_button_deny"
                    android:text="@string/auth_view_button_deny"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <include
        layout="@layout/layout_verifying"
        android:id="@+id/layout_verifying"
        android:visibility="gone"/>

    <include
        layout="@layout/fragment_qr_authentication_success"
        android:id="@+id/layout_success_qr_scan"
        android:visibility="gone"/>

    <include
        layout="@layout/layout_invalid"
        android:id="@+id/layout_invalid"
        android:visibility="gone"/>

    <include
        layout="@layout/layout_qr_auth_expired"
        android:id="@+id/layout_qr_expired"
        android:visibility="gone"/>

</FrameLayout>